updated ERD image

--- a/data/crime_data_cleaner.ipynb
+++ b/data/crime_data_cleaner.ipynb
@@ -1541,12 +1541,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a7634a85",
+   "id": "057756c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#connect to postgresSQL and movies_df DataFrame to SQL Database\n",
-    "#connect to postgresSQL and movies_df DataFrame to SQL Database\n",
+    "#connect to postgresSQL and sample_crime_df DataFrame to SQL Database\n",
     "from config import db_password\n",
     "from sqlalchemy import create_engine\n",
     "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/chicago_crime\"\n",
