updated clean weather data and ERD

--- a/data/weather_data_cleaner.ipynb
+++ b/data/weather_data_cleaner.ipynb
@@ -1357,10 +1357,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Station</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Elevation</th>\n",
        "      <th>Date</th>\n",
        "      <th>Average_Wind_Speed</th>\n",
        "      <th>Average_Temperature</th>\n",
@@ -1380,10 +1376,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>USW00094846</td>\n",
-       "      <td>41.96017</td>\n",
-       "      <td>-87.93164</td>\n",
-       "      <td>204.8</td>\n",
        "      <td>2010-01-01</td>\n",
        "      <td>10.29</td>\n",
        "      <td>NaN</td>\n",
@@ -1401,10 +1393,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>USW00094846</td>\n",
-       "      <td>41.96017</td>\n",
-       "      <td>-87.93164</td>\n",
-       "      <td>204.8</td>\n",
        "      <td>2010-01-02</td>\n",
        "      <td>11.86</td>\n",
        "      <td>NaN</td>\n",
@@ -1422,10 +1410,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>USW00094846</td>\n",
-       "      <td>41.96017</td>\n",
-       "      <td>-87.93164</td>\n",
-       "      <td>204.8</td>\n",
        "      <td>2010-01-03</td>\n",
        "      <td>10.29</td>\n",
        "      <td>NaN</td>\n",
@@ -1443,10 +1427,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>USW00094846</td>\n",
-       "      <td>41.96017</td>\n",
-       "      <td>-87.93164</td>\n",
-       "      <td>204.8</td>\n",
        "      <td>2010-01-04</td>\n",
        "      <td>11.41</td>\n",
        "      <td>NaN</td>\n",
@@ -1464,10 +1444,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>USW00094846</td>\n",
-       "      <td>41.96017</td>\n",
-       "      <td>-87.93164</td>\n",
-       "      <td>204.8</td>\n",
        "      <td>2010-01-05</td>\n",
        "      <td>8.50</td>\n",
        "      <td>NaN</td>\n",
@@ -1488,19 +1464,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       Station  Latitude  Longitude  Elevation        Date  \\\n",
-       "0  USW00094846  41.96017  -87.93164      204.8  2010-01-01   \n",
-       "1  USW00094846  41.96017  -87.93164      204.8  2010-01-02   \n",
-       "2  USW00094846  41.96017  -87.93164      204.8  2010-01-03   \n",
-       "3  USW00094846  41.96017  -87.93164      204.8  2010-01-04   \n",
-       "4  USW00094846  41.96017  -87.93164      204.8  2010-01-05   \n",
-       "\n",
-       "   Average_Wind_Speed  Average_Temperature  Maximum_Temperature  \\\n",
-       "0               10.29                  NaN                 16.0   \n",
-       "1               11.86                  NaN                 11.0   \n",
-       "2               10.29                  NaN                 18.0   \n",
-       "3               11.41                  NaN                 18.0   \n",
-       "4                8.50                  NaN                 23.0   \n",
+       "         Date  Average_Wind_Speed  Average_Temperature  Maximum_Temperature  \\\n",
+       "0  2010-01-01               10.29                  NaN                 16.0   \n",
+       "1  2010-01-02               11.86                  NaN                 11.0   \n",
+       "2  2010-01-03               10.29                  NaN                 18.0   \n",
+       "3  2010-01-04               11.41                  NaN                 18.0   \n",
+       "4  2010-01-05                8.50                  NaN                 23.0   \n",
        "\n",
        "   Minimum_Temperature  Fog_Ice_Freezing_Fog  Heavy_Fog_or_Heavy_Freezing_Fog  \\\n",
        "0                  5.0                   NaN                              NaN   \n",
@@ -1532,6 +1501,10 @@
    "source": [
     "#Drop unneeded columns\n",
     "weather_df = weather_df.drop(columns=[\n",
+    "    'Station',\n",
+    "    'Latitude',\n",
+    "    'Longitude',\n",
+    "    'Elevation',\n",
     "    'Time_of_Fastest_Wind',\n",
     "    'Peak_Gust_Time',\n",
     "    'Direction_Fastest_2_Minute_Wind',\n",
@@ -1566,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e095d9b3",
    "metadata": {},
    "outputs": [],
