updated notebooks and created folder for raw data files.

--- a/data/weather_data_cleaner.ipynb
+++ b/data/weather_data_cleaner.ipynb
@@ -392,25 +392,9 @@
    "execution_count": 3,
    "id": "2ab04393",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['STATION', 'LATITUDE', 'LONGITUDE', 'ELEVATION', 'DATE', 'AWND', 'FMTM',\n",
-       "       'PGTM', 'TAVG', 'TMAX', 'TMIN', 'WDF2', 'WDF5', 'WSF2', 'WSF5', 'WT01',\n",
-       "       'WT02', 'WT03', 'WT04', 'WT05', 'WT06', 'WT07', 'WT08', 'WT09', 'WT11',\n",
-       "       'WT13', 'WT14', 'WT15', 'WT16', 'WT17', 'WT18', 'WT19', 'WT21', 'WT22'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#check all column header names\n",
-    "weather_df.columns"
+    "#check all column header names\n"
    ]
   },
   {
@@ -1507,6 +1491,8 @@
     "    'Elevation',\n",
     "    'Time_of_Fastest_Wind',\n",
     "    'Peak_Gust_Time',\n",
+    "    'Maximum_Temperature',\n",
+    "    'Minimum_Temperature',\n",
     "    'Direction_Fastest_2_Minute_Wind',\n",
     "    'Direction_Fastest_5_Minute_Wind',\n",
     "    'Fastest_2_Minute_Wind_Speed',\n",
@@ -1533,23 +1519,326 @@
    "outputs": [],
    "source": [
     "#export to csv\n",
-    "output_data_file = \"clean_weather_data.csv\"\n",
-    "weather_df.to_csv(output_data_file, index=False)"
+    "#output_data_file = \"clean_weather_data.csv\"\n",
+    "#weather_df.to_csv(output_data_file, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e095d9b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#connect to postgresSQL and movies_df DataFrame to SQL Database\n",
-    "from config import db_password\n",
-    "from sqlalchemy import create_engine\n",
-    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/chicago_crime\"\n",
-    "engine = create_engine(db_string)\n",
-    "weather_df.to_sql(name='weather_data', con=engine)"
+    "#from config import db_password\n",
+    "#from sqlalchemy import create_engine\n",
+    "#db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/chicago_crime\"\n",
+    "#engine = create_engine(db_string)\n",
+    "#weather_df.to_sql(name='weather_data', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0009f8f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Average_Wind_Speed</th>\n",
+       "      <th>Average_Temperature</th>\n",
+       "      <th>Maximum_Temperature</th>\n",
+       "      <th>Minimum_Temperature</th>\n",
+       "      <th>Fog_Ice_Freezing_Fog</th>\n",
+       "      <th>Heavy_Fog_or_Heavy_Freezing_Fog</th>\n",
+       "      <th>Thunder</th>\n",
+       "      <th>Hail</th>\n",
+       "      <th>Smoke_or_Haze</th>\n",
+       "      <th>Mist</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Freezing_Rain</th>\n",
+       "      <th>Snow_Snow_Pellets_or_Ice Crystals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3287</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3288</th>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>8.72</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3289</th>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>11.63</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3290</th>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3291</th>\n",
+       "      <td>2019-01-05</td>\n",
+       "      <td>8.28</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4378</th>\n",
+       "      <td>2021-12-27</td>\n",
+       "      <td>10.51</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4379</th>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>6.26</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4380</th>\n",
+       "      <td>2021-12-29</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4381</th>\n",
+       "      <td>2021-12-30</td>\n",
+       "      <td>5.14</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4382</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1096 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  Average_Wind_Speed  Average_Temperature  \\\n",
+       "3287  2019-01-01                7.61                 31.0   \n",
+       "3288  2019-01-02                8.72                 28.0   \n",
+       "3289  2019-01-03               11.63                 29.0   \n",
+       "3290  2019-01-04                8.05                 37.0   \n",
+       "3291  2019-01-05                8.28                 39.0   \n",
+       "...          ...                 ...                  ...   \n",
+       "4378  2021-12-27               10.51                 40.0   \n",
+       "4379  2021-12-28                6.26                 34.0   \n",
+       "4380  2021-12-29                8.05                 35.0   \n",
+       "4381  2021-12-30                5.14                 32.0   \n",
+       "4382  2021-12-31                 NaN                 37.0   \n",
+       "\n",
+       "      Maximum_Temperature  Minimum_Temperature  Fog_Ice_Freezing_Fog  \\\n",
+       "3287                 34.0                 26.0                   1.0   \n",
+       "3288                 30.0                 26.0                   1.0   \n",
+       "3289                 38.0                 24.0                   NaN   \n",
+       "3290                 48.0                 31.0                   NaN   \n",
+       "3291                 52.0                 32.0                   NaN   \n",
+       "...                   ...                  ...                   ...   \n",
+       "4378                 46.0                 32.0                   1.0   \n",
+       "4379                 37.0                 30.0                   1.0   \n",
+       "4380                 36.0                 28.0                   1.0   \n",
+       "4381                 37.0                 29.0                   1.0   \n",
+       "4382                  NaN                  NaN                   NaN   \n",
+       "\n",
+       "      Heavy_Fog_or_Heavy_Freezing_Fog  Thunder  Hail  Smoke_or_Haze  Mist  \\\n",
+       "3287                              NaN      NaN   1.0            NaN   NaN   \n",
+       "3288                              NaN      NaN   NaN            NaN   NaN   \n",
+       "3289                              NaN      NaN   NaN            NaN   NaN   \n",
+       "3290                              NaN      NaN   NaN            NaN   NaN   \n",
+       "3291                              NaN      NaN   NaN            NaN   NaN   \n",
+       "...                               ...      ...   ...            ...   ...   \n",
+       "4378                              NaN      1.0   NaN            NaN   NaN   \n",
+       "4379                              1.0      NaN   NaN            NaN   NaN   \n",
+       "4380                              NaN      NaN   NaN            1.0   NaN   \n",
+       "4381                              NaN      NaN   NaN            1.0   NaN   \n",
+       "4382                              NaN      NaN   NaN            NaN   NaN   \n",
+       "\n",
+       "      Rain  Freezing_Rain  Snow_Snow_Pellets_or_Ice Crystals  \n",
+       "3287   NaN            NaN                                NaN  \n",
+       "3288   NaN            NaN                                NaN  \n",
+       "3289   NaN            NaN                                NaN  \n",
+       "3290   NaN            NaN                                NaN  \n",
+       "3291   NaN            NaN                                NaN  \n",
+       "...    ...            ...                                ...  \n",
+       "4378   NaN            NaN                                NaN  \n",
+       "4379   NaN            NaN                                NaN  \n",
+       "4380   NaN            NaN                                NaN  \n",
+       "4381   NaN            NaN                                NaN  \n",
+       "4382   NaN            NaN                                NaN  \n",
+       "\n",
+       "[1096 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df = weather_df[weather_df['Date'] >= dt.date(2019, 1, 1)]\n",
+    "weather_df = weather_df[weather_df['Date'] <= dt.date(2021, 12, 31)]\n",
+    "weather_df"
    ]
   }
  ],
