removing old notebook and old csv files

--- a/data/data_cleaner.ipynb
+++ b/data/data_cleaner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "28e76d97",
+   "id": "39db777d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940430cf",
+   "id": "c30ba38f",
    "metadata": {},
    "source": [
     "## Crime Data\n"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10291ce4",
+   "id": "efc0f79a",
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c2133929",
+   "execution_count": 4,
+   "id": "2df20674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,8 +289,15 @@
     "#Dropping all NaN values\n",
     "three_year_crime_df.dropna(subset=['Location Description', 'Community Area', 'Latitude', 'Longitude'], inplace=True)\n",
     "\n",
+    "#Format column names\n",
+    "three_year_crime_df.rename({\n",
+    "    'Primary Type': 'Primary_Type',\n",
+    "    'Location Description': 'Location_Description',\n",
+    "    'Violence Status': 'Violence_Status',\n",
+    "    'Community Area': 'Community_Area'}, axis='columns', inplace=True)\n",
+    "\n",
     "#export to csv\n",
-    "output_data_file = \"three_year_crime_data.csv\"\n",
+    "output_data_file = \"clean/three_year_crime_data.csv\"\n",
     "three_year_crime_df.to_csv(output_data_file, index=False)\n",
     "\n",
     "#connect to postgresSQL and 3_year_crime_data DataFrame to SQL Database\n",
@@ -301,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1bc3d71c",
+   "execution_count": 5,
+   "id": "3091f551",
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +334,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ID</th>\n",
-       "      <th>Primary Type</th>\n",
+       "      <th>Primary_Type</th>\n",
        "      <th>Description</th>\n",
-       "      <th>Location Description</th>\n",
-       "      <th>Violence Status</th>\n",
+       "      <th>Location_Description</th>\n",
+       "      <th>Violence_Status</th>\n",
        "      <th>Arrest</th>\n",
-       "      <th>Community Area</th>\n",
+       "      <th>Community_Area</th>\n",
        "      <th>Year</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
@@ -512,7 +519,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               ID         Primary Type  \\\n",
+       "               ID         Primary_Type  \\\n",
        "90       12014684                THEFT   \n",
        "183      11864018   DECEPTIVE PRACTICE   \n",
        "235      11859805                THEFT   \n",
@@ -538,7 +545,7 @@
        "7469191                                   SIMPLE   \n",
        "7469192                             RETAIL THEFT   \n",
        "\n",
-       "                           Location Description Violence Status  Arrest  \\\n",
+       "                           Location_Description Violence_Status  Arrest  \\\n",
        "90                                       STREET     NON-VIOLENT   False   \n",
        "183                COMMERCIAL / BUSINESS OFFICE     NON-VIOLENT   False   \n",
        "235                          GROCERY FOOD STORE     NON-VIOLENT   False   \n",
@@ -551,7 +558,7 @@
        "7469191  PARKING LOT / GARAGE (NON RESIDENTIAL)         VIOLENT    True   \n",
        "7469192                      SMALL RETAIL STORE     NON-VIOLENT    True   \n",
        "\n",
-       "         Community Area  Year   Latitude  Longitude        Date      Time  \n",
+       "         Community_Area  Year   Latitude  Longitude        Date      Time  \n",
        "90                 15.0  2020  41.952052 -87.754660  2020-03-17  21:30:00  \n",
        "183                33.0  2019  41.852248 -87.623786  2019-09-24  08:00:00  \n",
        "235                24.0  2019  41.895732 -87.687784  2019-10-13  20:30:00  \n",
@@ -567,7 +574,7 @@
        "[668177 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8490f94",
+   "id": "a93f2b2c",
    "metadata": {},
    "source": [
     "## Weather Data"
@@ -587,8 +594,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b950fdac",
+   "execution_count": 6,
+   "id": "5502c0ab",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +608,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,8 +621,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3e00c1a0",
+   "execution_count": 7,
+   "id": "61ec2b87",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +789,7 @@
        "[1096 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +842,7 @@
     "])\n",
     "\n",
     "#export to csv\n",
-    "output_data_file = \"three_year_weather_data.csv\"\n",
+    "output_data_file = \"clean/three_year_weather_data.csv\"\n",
     "weather_df.to_csv(output_data_file, index=False)\n",
     "\n",
     "#connect to postgresSQL and weather DataFrame to SQL Database\n",
@@ -848,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "891b9e70",
+   "id": "8db759db",
    "metadata": {},
    "source": [
     "## Community Data"
@@ -856,8 +863,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "afbb5520",
+   "execution_count": 9,
+   "id": "17da56d0",
    "metadata": {},
    "outputs": [
     {
@@ -881,8 +888,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Community Area</th>\n",
-       "      <th>Community Name</th>\n",
+       "      <th>Community_Area</th>\n",
+       "      <th>Community_Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -947,7 +954,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    Community Area      Community Name\n",
+       "    Community_Area      Community_Name\n",
        "59             1.0         Rogers Park\n",
        "74             2.0          West Ridge\n",
        "66             3.0              Uptown\n",
@@ -963,7 +970,7 @@
        "[77 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,15 +986,15 @@
     "community_df.dropna(inplace=True)\n",
     "\n",
     "#rename columns\n",
-    "community_df.rename({'GEOID': 'Community Area',\n",
-    "                   'GEOG': 'Community Name'}, axis='columns', inplace=True)\n",
+    "community_df.rename({'GEOID': 'Community_Area',\n",
+    "                   'GEOG': 'Community_Name'}, axis='columns', inplace=True)\n",
     "\n",
     "#sort and index DataFrame\n",
-    "sorted_community_df = community_df.sort_values('Community Area')\n",
-    "sorted_community_df.set_index('Community Area')\n",
+    "sorted_community_df = community_df.sort_values('Community_Area')\n",
+    "sorted_community_df.set_index('Community_Area')\n",
     "\n",
     "#export to csv\n",
-    "output_data_file = \"clean_community_data.csv\"\n",
+    "output_data_file = \"clean/clean_community_data.csv\"\n",
     "sorted_community_df.to_csv(output_data_file, index=False)\n",
     "\n",
     "#connect to postgresSQL and weather DataFrame to SQL Database\n",
@@ -1001,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ec8224",
+   "id": "1930602d",
    "metadata": {},
    "outputs": [],
    "source": []
